--- a/views/draft.html
+++ b/views/draft.html
@@ -20,5 +20,5 @@
   </div>
 
 </div>
-    
-<ng-include src="playersList"></ng-include>
+
+<ng-include src="playersList" ng-if="my_players"></ng-include>
