--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
 
 	<div class="col-sm-12">
 
-    <h2 class="margin-top-lg">{{displayname || username}}</h2>
+    <h2 class="margin-top-sm padding-top-sm">{{displayname || username}}</h2>
 
     <div class="card">
       <div class="card-main">
