--- a/views/login.html
+++ b/views/login.html
@@ -16,8 +16,8 @@
                 </div>
                 <div class="card-inner">
                   <p class="text-center">
-                    <span class="avatar avatar-inline avatar-lg">
-                      <img alt="Login" src="images/users/avatar-001.jpg">
+                    <span class="avatar avatar-inline avatar-lg no-radius">
+                      <img alt="Login" src="images/helmet.jpg">
                     </span>
                   </p>
                   <form class="form" action="index.html">
@@ -40,7 +40,7 @@
                     <div class="form-group">
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
-                          <button type="submit" class="btn btn-block waves-attach waves-button">Sign In</button>
+                          <button type="submit" ng-disabled="isLoading" class="btn btn-block waves-attach waves-button">Sign In</button>
                         </div>
                       </div>
                     </div>
