--- a/views/login.html
+++ b/views/login.html
@@ -15,11 +15,11 @@
                   </div>
                 </div>
                 <div class="card-inner">
-                  <p class="text-center">
+                  <!-- <p class="text-center">
                     <span class="avatar avatar-inline avatar-lg no-radius">
                       <img alt="Login" src="images/helmet.jpg">
                     </span>
-                  </p>
+                  </p> -->
                   <form class="form" action="index.html">
                     <div class="form-group form-group-label">
                       <div class="row">
