--- a/views/users.html
+++ b/views/users.html
@@ -33,7 +33,7 @@
             </span>
 
             <span ng-show="user.status === 'sent'" ng-cloak>
-              <a disabled class="btn btn-flat waves-attach"><i class="icon icon-2x">person</i></a>
+              <a disabled class="btn btn-flat waves-attach"><i class="icon icon-2x">record_voice_over</i></a>
             </span>
 
             <span ng-show="user.status === 'accepted'" ng-cloak>
