--- a/views/practice.html
+++ b/views/practice.html
@@ -7,16 +7,20 @@
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
 <div class="col-sm-12">
-  <div class="col-sm-12 text-right" ng-if="game > 0">
-  	<h3>Points: {{your_points}}</h3>
+
+  <div class="col-xx-6" ng-if="currentWeek" ng-cloak>
+    <h3>Week {{currentWeek}}</h3>
+  </div>
+  <div class="col-xx-6 text-right" ng-if="game > 0" ng-cloak>
+  	<h3>Points: {{your_points || "0.00"}}</h3>
   </div>
 
-  <ng-include src="'views/roster.html'" ng-init="showteam = true;roster = my_players;changeRoster = true;showpos = true;showpoints = true;" ng-if="game > 0"></ng-include>
+  <ng-include src="'views/roster.html'" ng-init="showteam = true;changeRoster = true;showpos = true;showpoints = true;" ng-if="my_players"></ng-include>
 
-  <div class="card">
+  <div class="card" ng-if="gameWeek && currentWeek && gameWeek === currentWeek" ng-show="game < 1" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
-        <div class="text-center" ng-if="game < 1 && gameWeek === currentWeek" ng-cloak>
+        <div class="text-center">
         	<h2>Setup your lineup for this week</h2>
         	<a ng-href="#/practice/draft/{{currentWeek}}" class="btn btn-flat btn-green waves-effect">Enter Draft</a>
         </div>
