--- a/views/practice.html
+++ b/views/practice.html
@@ -6,8 +6,7 @@
 
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
-<div class="col-sm-12">
-
+<div class="col-sm-12" ng-show="game === 1" ng-cloak>
   <div class="col-xx-6" ng-if="currentWeek" ng-cloak>
     <h3>Week {{currentWeek}}</h3>
   </div>
@@ -16,8 +15,10 @@
   </div>
 
   <ng-include src="'views/roster.html'" ng-init="showteam = true;changeRoster = true;showpos = true;showpoints = true;" ng-if="my_players"></ng-include>
+</div>
 
-  <div class="card" ng-if="gameWeek && currentWeek && gameWeek === currentWeek" ng-show="game < 1" ng-cloak>
+<div class="col-sm-12">
+  <div class="card" ng-if="gameWeek && currentWeek && gameWeek === currentWeek" ng-show="game === 0" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
         <div class="text-center">
