--- a/views/roster.html
+++ b/views/roster.html
@@ -11,6 +11,9 @@
           <span ng-if="!player.firstName">(empty)</span>
         </a>
       </td>
+      <td width="50">
+        {{player.stats[currentWeek].week_points || "0.00"}}
+      </td>
     </tr>
 	</tbody>
 </table>
