--- a/views/practice.html
+++ b/views/practice.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="col-sm-12">
-  <div class="card" ng-if="gameWeek && currentWeek && gameWeek === currentWeek" ng-show="game === 0" ng-cloak>
+  <div class="card" ng-show="game === 0" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
         <div class="text-center">
