Moving graphs to scripts

--- a/views/notifications.html
+++ b/views/notifications.html
@@ -1,11 +1,11 @@
 <ul class="notifications nav nav-list pull-right padding-right-sm" ng-if="uid">
   <li><a class="logo-btn" ng-href="#/friendRequests">
-      <span class="icon icon-2x" tooltip data-toggle="tooltip" data-placement="bottom" title="Friend Requests" ng-class="{'icon-disabled': friendReceiveRequest.length === 0}">group</span>
-      <span class="label label-red" ng-cloak ng-if="friendReceiveRequest.length > 0">{{friendReceiveRequest.length}}</span>
+      <span class="icon icon-2x" tooltip data-toggle="tooltip" data-placement="bottom" title="Friend Requests" ng-class="{'icon-disabled': !friendRequests}">group</span>
+      <span class="label label-red" ng-cloak ng-if="friendRequests">{{friendRequests.length}}</span>
     </a></li>
     <li><a class="logo-btn" ng-href="#/challengeRequests">
-      <span class="icon icon-2x" ng-class="{'icon-disabled': userChallenges.receivedList.length === 0 && friendChallenges.receivedList.length === 0}" tooltip data-toggle="tooltip" data-placement="bottom" title="Game Requests">notifications</span>
-      <span class="label label-red" ng-show="userChallenges.receivedList > 0 || friendChallenges.receivedList.length > 0" ng-cloak>{{userChallenges.receivedList + friendChallenges.receivedList }}</span>
+      <span class="icon icon-2x" ng-class="{'icon-disabled': !challengeRequests.users && !challengeRequests.friends}" tooltip data-toggle="tooltip" data-placement="bottom" title="Game Requests">notifications</span>
+      <span class="label label-red" ng-show="challengeRequests.users.length > 0 || challengeRequests.friends.length > 0" ng-cloak>{{challengeRequests.users.length + challengeRequests.friends.length }}</span>
     </a></li>
     <li class="dropdown"><a class="more logo-btn pull-right" data-toggle="dropdown">
       <span class="icon icon-2x">more_vert</span>
