--- a/views/players.html
+++ b/views/players.html
@@ -6,4 +6,4 @@
 
 <!-- <ng-include src="'views/weeks.html'"></ng-include> -->
 
-<ng-include src="playersList" ng-if="players"></ng-include>
+<ng-include src="'views/player/list.html'" ng-if="players.list"></ng-include>
