--- a/views/roster.html
+++ b/views/roster.html
@@ -12,7 +12,7 @@
         </a>
       </td>
       <td width="50">
-        {{player.stats[currentWeek].week_points || "0.00"}}
+        {{player.stats[week].week_points || "0.00"}}
       </td>
     </tr>
 	</tbody>
