--- a/views/users.html
+++ b/views/users.html
@@ -21,23 +21,31 @@
   </div>
 
   <div class="clearfix"></div>
-  
+
   <div class="card-table table-responsive col-xx-12">
     <table class="table">
       <tbody>
         <tr ng-repeat="user in users.list">
-          <td width="50" class="user-status">
+          <td width="100" class="user-status">
 
-            <span ng-show="user.status === 'available'" ng-cloak>
-              <a ng-click="users.addFriend(user.id)" class="btn btn-flat waves-attach"><i class="icon icon-2x">person_add</i></a>
+            <span ng-show="user.status === 'available' && users.request.indexOf(user.id) < 0" ng-cloak>
+              <a ng-click="users.addFriend(user)" class="btn btn-green btn-flat waves-attach"><i class="icon icon-2x">person_add</i></a>
             </span>
 
-            <span ng-show="user.status === 'sent'" ng-cloak>
+            <span ng-show="user.status === 'accepted' && users.request.indexOf(user.id) < 0" ng-cloak>
+              <a class="btn btn-flat btn-disabled"><i class="icon icon-2x">group</i></a>
+            </span>
+
+            <span ng-show="user.status === 'sent' || users.request.indexOf(user.id) >= 0" ng-cloak>
               <a disabled class="btn btn-flat waves-attach"><i class="icon icon-2x">check</i></a>
             </span>
 
-            <span ng-show="user.status === 'accepted'" ng-cloak>
-              <a class="btn btn-flat btn-green btn-disabled"><i class="icon icon-2x">group</i></a>
+            <span ng-show="users.challenges.sent.indexOf(user.id) < 0" ng-cloak>
+              <a ng-click="users.challenge(user)" class="btn btn-green btn-flat waves-attach"><i class="mdi mdi-clipboard-account icon-2x"></i></a>
+            </span>
+
+            <span ng-show="users.challenges.sent.indexOf(user.id) >= 0" ng-cloak>
+              <a class="btn btn-disabled btn-flat waves-attach"><i class="mdi mdi-clipboard-check icon-2x"></i></a>
             </span>
 
             <!-- <span class="label" ng-show="user.status === 'sent'">Request Sent</span>
