--- a/views/draft.html
+++ b/views/draft.html
@@ -21,4 +21,4 @@
 
 </div>
 
-<ng-include src="playersList" ng-if="my_players"></ng-include>
+<ng-include src="'views/player/list.html'" ng-if="my_players"></ng-include>
