--- a/views/challenges.html
+++ b/views/challenges.html
@@ -5,6 +5,7 @@
 </div>
 
 <div class="col-sm-12">
+
 	<!-- <div class="col-sm-12"> -->
 
     <div class="card">
@@ -25,12 +26,12 @@
         <div class="card-inner margin-top-no">
           <div class="tab-content">
             <div class="tab-pane fade active in" id="friend_tab">
-              <p ng-show="friends.draftList.length === 0" ng-cloak>No friend challenges</p>
+              <p ng-show="!friends.draftList" ng-cloak>No friend challenges</p>
               <ng-include src="'views/challenges/list.html'" ng-if="friends.draftList.length > 0" ng-init="challenges = friendChallenges.challenges"></ng-include>
               <!-- <ng-include src="'views/challenges/list.html'" ng-if="friends.challenges.length > 0" ng-init="challenges = friends.challenges"></ng-include> -->
             </div>
             <div class="tab-pane fade" id="player_tab">
-              <p ng-show="users.challenges.length === 0" ng-cloak>No user challenges.</p>
+              <p ng-show="!users.challenges.length" ng-cloak>No user challenges.</p>
               <ng-include src="'views/challenges/list.html'" ng-if="users.challenges.length > 0" ng-init="challenges = users.challenges"></ng-include>
             </div>
 
