--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
   <!-- <div class="col-sm-10 col-sm-offset-1 padding-no"></div> -->
 </div>
 
-<div ng-show="!uid" ng-controller="LoginCtrl" class="col-sm-12" ng-cloak>
+<div ng-show="!uid" ng-controller="LoginCtrl as login" class="col-sm-12" ng-cloak>
 	<ng-include src="'views/login.html'"></ng-include>
 </div>
 
