--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 
 <ng-include src="'views/error.html'"></ng-include>
 
-<form ng-submit="doLogin()">
+<form ng-submit="login.signin()">
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-lg-push-4 col-sm-6 col-sm-push-3">
@@ -25,7 +25,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
                           <label class="floating-label" for="doc_login_username">Username</label>
-                          <input class="form-control" id="user" type="text" ng-model="$parent.user" autocomplete="new-password">
+                          <input class="form-control" id="user" type="text" ng-model="login.user" autocomplete="new-password">
                         </div>
                       </div>
                     </div>
@@ -33,20 +33,23 @@
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
                           <label class="floating-label" for="doc_login_password">Password</label>
-                          <input class="form-control" id="pass" type="password" ng-model="$parent.password"  autocomplete="new-password">
+                          <input class="form-control" id="pass" type="password" ng-model="login.password"  autocomplete="new-password">
                         </div>
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
-                          <button type="submit" ng-disabled="isLoading" class="btn btn-block waves-attach waves-button">Sign In</button>
+                          <button type="submit" ng-disabled="isLoading" class="btn btn-flat btn-green btn-block waves-attach waves-button">Sign In</button>
                         </div>
                       </div>
                     </div>
                     <div class="form-group">
                       <div class="row">
-                        <div class="col-md-5 col-md-push-1 col-sm-5 col-xs-6">
+                        <div class="col-sm-10 col-sm-push-1">
+                          <p class="margin-no"><a class="btn btn-flat btn-block waves-attach" ng-href="#/register">Create an account</a></p>
+                        </div>
+                        <!-- <div class="col-md-5 col-md-push-1 col-sm-5 col-xs-6">
                           <div class="checkbox checkbox-adv">
                             <label for="doc_login_remember">
                               <input class="access-hide" id="doc_login_remember" name="doc_login_remember" type="checkbox">Stay signed in
@@ -56,7 +59,7 @@
                         </div>
                         <div class="col-md-6 col-sm-7 col-xs-6">
                             <p class="margin-no pull-right"><a class="btn btn-flat btn-blue waves-attach" ng-href="#/register">Create an account</a></p>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </form>
