--- a/views/notifications.html
+++ b/views/notifications.html
@@ -4,7 +4,7 @@
       <span class="label label-red" ng-cloak ng-if="friendRequests">{{friendRequests.length}}</span>
     </a></li>
     <li><a class="logo-btn" ng-href="#/requests/challenges">
-      <span class="mdi mdi-bell icon-2x" ng-class="{'mdi-bell-ring': challengeRequests.users.length > 0 || challengeRequests.friends.length > 0, 'icon-disabled': challengeRequests.users.length === 0 && challengeRequests.friends.length === 0}" tooltip data-toggle="tooltip" data-placement="bottom" title="Game Requests"></span>
+      <span class="mdi mdi-bell icon-2x" ng-class="{'mdi-bell-ring': challengeRequests.users.length > 0 || challengeRequests.friends.length > 0, 'icon-disabled': !challengeRequests.users && !challengeRequests.friends}" tooltip data-toggle="tooltip" data-placement="bottom" title="Game Requests"></span>
       <span class="label label-red" ng-show="challengeRequests.users.length > 0 || challengeRequests.friends.length > 0" ng-cloak>{{challengeRequests.users.length + challengeRequests.friends.length }}</span>
     </a></li>
     <li class="dropdown"><a class="more logo-btn pull-right" data-toggle="dropdown">
