--- a/views/register.html
+++ b/views/register.html
@@ -15,11 +15,11 @@
                   </div>
                 </div>
                 <div class="card-inner">
-                  <p class="text-center">
+                  <!-- <p class="text-center">
                     <span class="avatar avatar-inline avatar-lg">
                       <img alt="Register" src="images/users/avatar-001.jpg">
                     </span>
-                  </p>
+                  </p> -->
                   <form class="form" action="index.html">
                     <div class="form-group form-group-label">
                       <div class="row">
@@ -48,7 +48,14 @@
                     <div class="form-group">
                       <div class="row">
                         <div class="col-md-10 col-md-push-1">
-                          <button type="submit" class="btn btn-block waves-attach waves-button">Register</button>
+                          <button type="submit" class="btn btn-block btn-flat btn-green waves-attach">Register</button>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="row">
+                          <div class="col-sm-10 col-sm-push-1">
+                            <p class="margin-no"><a class="btn btn-flat btn-block waves-attach" ng-href="#/">Back to login</a></p>
+                          </div>
                         </div>
                       </div>
                     </div>
