--- a/views/friend-requests.html
+++ b/views/friend-requests.html
@@ -10,7 +10,7 @@
 
 <div class="col-sm-12">
 
-  <div class="card" ng-show="friendReceiveRequest.length === 0" ng-cloak>
+  <div class="card" ng-show="!friends.received" ng-cloak>
     <div class="card-main">
       <div class="card-inner">
         <p>No friend requests</p>
