--- a/views/users.html
+++ b/views/users.html
@@ -13,7 +13,7 @@
             <input type="search" class="form-control" ng-model="searchUser" placeholder="Search User..." />
           </div>
           <div class="col-sm-1">
-            <a ng-click="search()" class="btn btn-block waves-effect"><span class="icon icon-lg">search</span></a>
+            <a ng-click="search()" class="btn btn-block waves-effect"><span class="mdi mdi-magnify icon-lg"></span></a>
               <!-- <a ng-click="clearSearch()" ng-show="searchPlayer.length > 0" class="btn btn-flat btn-block btn-default">Clear</a> -->
           </div>
       </div>
