--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,8 @@
-<div class="content-heading" ng-if="uid" ng-cloak>
+<div class="content-heading">
   <!-- <div class="col-sm-10 col-sm-offset-1 padding-no"></div> -->
 </div>
 
-<div ng-show="!uid" ng-controller="LoginCtrl as login" class="col-sm-12" ng-cloak>
-	<ng-include src="'views/login.html'"></ng-include>
-</div>
-
-<div class="home" ng-show="uid" ng-cloak>
+<div class="home">
 
   <!-- <div class="slideshow">
 
